--- a/app/distributerkycdocument/kycdoc.html
+++ b/app/distributerkycdocument/kycdoc.html
@@ -62,7 +62,7 @@
       
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body text-center">
-                <img class="imageClass" style="width: 800px; height: 800px;" src="{{kycdoc.qrlink}}" ng-model="kycdoc.qrlink"/>
+                <img class="imageClass" style="width: 800px; height: 800px;" src="{{adharcard.url}}" ng-model="adharcard.url"/>
             </div>
           </div>
         </div>
@@ -70,13 +70,13 @@
           <div class="card-header" id="headingTwo">
             <h2 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-               Shop Licence
+               Pan Card
               </button>
             </h2>
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body text-center">
-                <img class="imageClass" style="width: 800px; height: 800px;" src="{{kycdoc.qrlink}}" ng-model="kycdoc.qrlink"/>
+                <img class="imageClass" style="width: 800px; height: 800px;" src="{{pancard.url}}" ng-model="pancard.url"/>
             </div>
           </div>
         </div>
@@ -84,13 +84,13 @@
           <div class="card-header" id="headingThree">
             <h2 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Document
+                Shop Licence
               </button>
             </h2>
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div class="card-body text-center">
-                <img class="imageClass" style="width: 800px; height: 800px;" src="{{kycdoc.qrlink}}" ng-model="kycdoc.qrlink"/>
+                <img class="imageClass" style="width: 800px; height: 800px;" src="{{shoplicence.url}}" ng-model="shoplicence.url"/>
             </div>
           </div>
         </div>
