--- a/app/Distributer/approveddistributer.html
+++ b/app/Distributer/approveddistributer.html
@@ -287,7 +287,7 @@
           <!-- Nav Item - User Information -->
           <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="mr-2 d-none d-lg-inline text-gray-600 small">Pooja Bhagat</span>
+              <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
               <img class="img-profile rounded-circle" src="img/admin.jpg">
             </a>
             <!-- Dropdown - User Information -->
@@ -341,9 +341,9 @@
 
         <div class="card-body">
           <div class="row">
-              <div class="col-xs-4">
+              <!-- <div class="col-xs-4">
                 <img class="imageClass" style="width: 200px; height: 200px;" [src]="distributer.hotoPath" />
-              </div>
+              </div> -->
              
     <div class="w-25">
 
