--- a/app/consumerkycdocument/kycdoc.html
+++ b/app/consumerkycdocument/kycdoc.html
@@ -26,7 +26,7 @@
     
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                    <span class="d-block d-lg-none">Distributor name</span>
+                    <span class="d-block d-lg-none">Consumer name</span>
                     <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="" /></span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -44,6 +44,22 @@
 </br><br>
 
     <div class="container" >
+      <!-- <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" ng-model="rationType.type" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Select Card Type
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" >White</a>
+          <a class="dropdown-item" >Yellow</a>
+          <a class="dropdown-item" >White</a>
+        </div>
+      </div> -->
+
+
+      <div class="form-group">
+        <label for="post">CardType</label>
+        <textarea name="post" class="form-control" ng-model="rationType.type"></textarea>
+    </div>
 
         <div class="btn-group w-25 " role="group" aria-label="Basic example">
             <button type="button " class="btn btn-success" ng-click="approveKyc(distributersId)" >Approve</button>
@@ -63,7 +79,7 @@
       
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body text-center">
-                <img class="imageClass" style="width: 800px; height: 800px;" src="{{kycdoc.url}}" ng-model="kycdoc.qrlink"/>
+                <img class="imageClass" style="width: 800px; height: 800px;" src="{{adahrcard.url}}" ng-model="adahrcard.url"/>
             </div>
           </div>
         </div>
@@ -71,13 +87,13 @@
           <div class="card-header" id="headingTwo">
             <h2 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-               Shop Licence
+              Ration Card
               </button>
             </h2>
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body text-center">
-                <img class="imageClass" style="width: 800px; height: 800px;" src="{{kycdoc.url}}" ng-model="kycdoc.qrlink"/>
+                <img class="imageClass" style="width: 800px; height: 800px;" src="{{rationCard.url}}" ng-model="rationCard.url"/>
             </div>
           </div>
         </div>
@@ -85,13 +101,13 @@
           <div class="card-header" id="headingThree">
             <h2 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Document
+                Profile Pic
               </button>
             </h2>
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div class="card-body text-center">
-                <img class="imageClass" style="width: 800px; height: 800px;" src="{{kycdoc.url}}" ng-model="kycdoc.qrlink"/>
+                <img class="imageClass" style="width: 800px; height: 800px;" src="{{profilepic.url}}" ng-model="profilepic.url"/>
             </div>
           </div>
         </div>
