--- a/app/consumers/approvedconsumer.html
+++ b/app/consumers/approvedconsumer.html
@@ -336,9 +336,9 @@
 
       <div class="card-body">
         <div class="row">
-            <div class="col-xs-4">
+            <!-- <div class="col-xs-4">
               <img class="imageClass" style="width: 200px; height: 200px;" [src]="distributer.hotoPath" />
-            </div>
+            </div> -->
            
   <div class="w-25">
 
